Added Scene Hierarchy panel

--- a/Tiny-Editor/Tiny-Editor.vcxproj.filters
+++ b/Tiny-Editor/Tiny-Editor.vcxproj.filters
@@ -3,8 +3,10 @@
   <ItemGroup>
     <ClCompile Include="src\EditorLayer.cpp" />
     <ClCompile Include="src\TinyEditorApp.cpp" />
+    <ClCompile Include="src\Panels\SceneHierarchyPanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\EditorLayer.h" />
+    <ClInclude Include="src\Panels\SceneHierarchyPanel.h" />
   </ItemGroup>
 </Project>
