--- a/Tiny-Editor/imgui.ini
+++ b/Tiny-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2157,1337
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,19 +9,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=839,1318
+Pos=1475,19
+Size=445,1061
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=841,19
-Size=1316,1318
+Pos=378,19
+Size=1095,1061
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=376,1061
+Collapsed=0
+DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=-246,121 Size=2157,1318 Split=X Selected=0x1C33C293
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=839,1061 CentralNode=1 Selected=0x1C33C293
-  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1316,1061 Selected=0x995B0CF8
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=125,178 Size=1920,1061 Split=X Selected=0x1C33C293
+  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1473,1061 Split=X
+    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Selected=0x9A68760C
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1095,1061 CentralNode=1 Selected=0x995B0CF8
+  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=445,1061 Selected=0x1C33C293
 
