--- a/Tiny-Editor/imgui.ini
+++ b/Tiny-Editor/imgui.ini
@@ -22,14 +22,22 @@ DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=376,1061
+Size=376,395
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
+
+[Window][Properties]
+Pos=0,416
+Size=376,664
+Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=125,178 Size=1920,1061 Split=X Selected=0x1C33C293
-  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1473,1061 Split=X
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Selected=0x9A68760C
-    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1095,1061 CentralNode=1 Selected=0x995B0CF8
-  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=445,1061 Selected=0x1C33C293
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=315,368 Size=1920,1061 Split=X Selected=0x1C33C293
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1473,1061 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=376,395 Selected=0x9A68760C
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,664 Selected=0xC89E3217
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1095,1061 CentralNode=1 Selected=0x995B0CF8
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=445,1061 Selected=0x1C33C293
 
