Added Sprite Renderer Component UI + merged incoming changes

--- a/Tiny-Editor/imgui.ini
+++ b/Tiny-Editor/imgui.ini
@@ -16,7 +16,7 @@ DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=378,19
-Size=1095,1061
+Size=994,1061
 Collapsed=0
 DockId=0x00000004,0
 
@@ -32,12 +32,20 @@ Size=376,664
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Stats]
+Pos=1374,19
+Size=546,1061
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=315,368 Size=1920,1061 Split=X Selected=0x1C33C293
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1473,1061 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
-      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=376,395 Selected=0x9A68760C
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,664 Selected=0xC89E3217
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1095,1061 CentralNode=1 Selected=0x995B0CF8
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=445,1061 Selected=0x1C33C293
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=49,102 Size=1920,1061 Split=X Selected=0x1C33C293
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1372,1061 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1473,1061 Split=X
+      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
+        DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=376,395 Selected=0x9A68760C
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,664 Selected=0xC89E3217
+      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=994,1061 CentralNode=1 Selected=0x995B0CF8
+    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=445,1061 Selected=0x1C33C293
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=546,1061 Selected=0x968648AE
 
