--- a/TinyEngine/TinyEngine.vcxproj
+++ b/TinyEngine/TinyEngine.vcxproj
@@ -157,7 +157,7 @@
     <ClInclude Include="src\TinyEngine\Core\Layer.h" />
     <ClInclude Include="src\TinyEngine\Core\LayerStack.h" />
     <ClInclude Include="src\TinyEngine\Core\Log.h" />
-    <ClInclude Include="src\TinyEngine\Core\MouseButtonCodes.h" />
+    <ClInclude Include="src\TinyEngine\Core\MouseCodes.h" />
     <ClInclude Include="src\TinyEngine\Core\Timestep.h" />
     <ClInclude Include="src\TinyEngine\Core\Window.h" />
     <ClInclude Include="src\TinyEngine\Debug\Instrumentor.h" />
@@ -186,6 +186,7 @@
     <ClInclude Include="src\TinyEngine\Scene\ScriptableEntity.h" />
     <ClInclude Include="src\TinyEngine\imGui\ImGuiLayer.h" />
     <ClInclude Include="src\tepch.h" />
+    <ClInclude Include="src\TinyEngine\Utils\PlatformUtils.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_fixes.hpp" />
@@ -559,6 +560,7 @@
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsPlatformUtils.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\TinyEngine\Core\Application.cpp" />
     <ClCompile Include="src\TinyEngine\Core\Layer.cpp" />
