--- a/Tiny-Editor/Tiny-Editor.vcxproj
+++ b/Tiny-Editor/Tiny-Editor.vcxproj
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>TE_PLATFORM_WINDOWS;_UNICODE;UNICODE;TE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\TinyEngine\vendor\spdlog\include;..\TinyEngine\src;..\TinyEngine\vendor;..\TinyEngine\vendor\glm;..\TinyEngine\vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\TinyEngine\vendor\spdlog\include;..\TinyEngine\src;..\TinyEngine\vendor;..\TinyEngine\vendor\glm;..\TinyEngine\vendor\entt\include;..\TinyEngine\vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -95,7 +95,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>TE_PLATFORM_WINDOWS;_UNICODE;UNICODE;TE_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\TinyEngine\vendor\spdlog\include;..\TinyEngine\src;..\TinyEngine\vendor;..\TinyEngine\vendor\glm;..\TinyEngine\vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\TinyEngine\vendor\spdlog\include;..\TinyEngine\src;..\TinyEngine\vendor;..\TinyEngine\vendor\glm;..\TinyEngine\vendor\entt\include;..\TinyEngine\vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -115,7 +115,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>TE_PLATFORM_WINDOWS;_UNICODE;UNICODE;TE_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\TinyEngine\vendor\spdlog\include;..\TinyEngine\src;..\TinyEngine\vendor;..\TinyEngine\vendor\glm;..\TinyEngine\vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\TinyEngine\vendor\spdlog\include;..\TinyEngine\src;..\TinyEngine\vendor;..\TinyEngine\vendor\glm;..\TinyEngine\vendor\entt\include;..\TinyEngine\vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
