--- a/TinyEngine/TinyEngine.vcxproj
+++ b/TinyEngine/TinyEngine.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>tepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TE_BUILD_DLL;TE_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;TE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;vendor\yaml-cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;vendor\yaml-cpp\include;vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -97,7 +97,7 @@
       <PrecompiledHeaderFile>tepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TE_BUILD_DLL;TE_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;TE_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;vendor\yaml-cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;vendor\yaml-cpp\include;vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -121,7 +121,7 @@
       <PrecompiledHeaderFile>tepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TE_BUILD_DLL;TE_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;TE_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;vendor\yaml-cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;vendor\yaml-cpp\include;vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -165,6 +165,7 @@
     <ClInclude Include="src\TinyEngine\Events\Event.h" />
     <ClInclude Include="src\TinyEngine\Events\KeyEvent.h" />
     <ClInclude Include="src\TinyEngine\Events\MouseEvent.h" />
+    <ClInclude Include="src\TinyEngine\Math\Math.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Buffer.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Camera.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Framebuffer.h" />
@@ -184,9 +185,10 @@
     <ClInclude Include="src\TinyEngine\Scene\SceneCamera.h" />
     <ClInclude Include="src\TinyEngine\Scene\SceneSerializer.h" />
     <ClInclude Include="src\TinyEngine\Scene\ScriptableEntity.h" />
+    <ClInclude Include="src\TinyEngine\Utils\PlatformUtils.h" />
     <ClInclude Include="src\TinyEngine\imGui\ImGuiLayer.h" />
     <ClInclude Include="src\tepch.h" />
-    <ClInclude Include="src\TinyEngine\Utils\PlatformUtils.h" />
+    <ClInclude Include="vendor\ImGuizmo\ImGuizmo.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_fixes.hpp" />
@@ -567,6 +569,7 @@
     <ClCompile Include="src\TinyEngine\Core\LayerStack.cpp" />
     <ClCompile Include="src\TinyEngine\Core\Log.cpp" />
     <ClCompile Include="src\TinyEngine\Core\Window.cpp" />
+    <ClCompile Include="src\TinyEngine\Math\Math.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\Buffer.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\Framebuffer.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp" />
@@ -586,6 +589,9 @@
     <ClCompile Include="src\TinyEngine\imGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\tepch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="vendor\ImGuizmo\ImGuizmo.cpp">
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
