--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -31,11 +31,17 @@
     <Filter Include="src\TinyEngine\Scene">
       <UniqueIdentifier>{D3E4ED55-BF73-771F-6892-8B1A540088C5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\TinyEngine\Utils">
+      <UniqueIdentifier>{16791B56-0208-A51F-AB26-B91A9794B5C5}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\TinyEngine\imGui">
       <UniqueIdentifier>{00FD8057-EC8B-0A21-95AA-1E1C81181BC7}</UniqueIdentifier>
     </Filter>
     <Filter Include="vendor">
       <UniqueIdentifier>{B3738122-9F15-ACF8-88D0-BF4C74113349}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\ImGuizmo">
+      <UniqueIdentifier>{73BF7F4C-DF4A-ED10-E85B-700554664911}</UniqueIdentifier>
     </Filter>
     <Filter Include="vendor\glm">
       <UniqueIdentifier>{829FC5A8-6E57-07F6-D75E-E051C335A2E6}</UniqueIdentifier>
@@ -109,6 +115,9 @@
       <Filter>src\TinyEngine\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\TinyEngine\Core\Log.h">
+      <Filter>src\TinyEngine\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Core\MouseCodes.h">
       <Filter>src\TinyEngine\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\TinyEngine\Core\Timestep.h">
@@ -189,11 +198,17 @@
     <ClInclude Include="src\TinyEngine\Scene\ScriptableEntity.h">
       <Filter>src\TinyEngine\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="src\TinyEngine\Utils\PlatformUtils.h">
+      <Filter>src\TinyEngine\Utils</Filter>
+    </ClInclude>
     <ClInclude Include="src\TinyEngine\imGui\ImGuiLayer.h">
       <Filter>src\TinyEngine\imGui</Filter>
     </ClInclude>
     <ClInclude Include="src\tepch.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\ImGuizmo\ImGuizmo.h">
+      <Filter>vendor\ImGuizmo</Filter>
     </ClInclude>
     <ClInclude Include="vendor\glm\glm\common.hpp">
       <Filter>vendor\glm\glm</Filter>
@@ -1284,10 +1299,7 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\TinyEngine\Utils\PlatformUtils.h" />
-    <ClInclude Include="src\TinyEngine\Core\MouseCodes.h">
-      <Filter>src\TinyEngine\Core</Filter>
-    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Math\Math.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
@@ -1312,6 +1324,9 @@
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
+      <Filter>src\Platform\Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsPlatformUtils.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
@@ -1386,9 +1401,12 @@
     <ClCompile Include="src\tepch.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="vendor\ImGuizmo\ImGuizmo.cpp">
+      <Filter>vendor\ImGuizmo</Filter>
+    </ClCompile>
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\Windows\WindowsPlatformUtils.cpp" />
+    <ClCompile Include="src\TinyEngine\Math\Math.cpp" />
   </ItemGroup>
 </Project>
