New shader system added Python scripts for retrieving dependencies added uniform buffers, added command line args better premake scripts fixed untracked files
Signed-off-by: EmotionIsMe <616356667@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
 # Binaries
 **/bin/
+!vendor/bin/premake/
 bin-int/
-
 # TinyEngine files
 *.log
-
 # Visual Studio files and folder
 .vs/
 **.sln
 **.vcxproj
 **.vcxproj.filters
 **.vcxproj.user
+
+# Directories
+TinyEngine/vendor/VulkanSDK
+Tiny-Editor/assets/cache
+scripts/__pycache__
