--- a/Tiny-Editor/imgui.ini
+++ b/Tiny-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,31 +15,37 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=378,19
-Size=994,1061
+Pos=378,24
+Size=765,876
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
-Pos=0,19
-Size=376,395
+Pos=0,24
+Size=376,326
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Properties]
-Pos=0,416
-Size=376,664
+Pos=0,352
+Size=376,548
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Stats]
-Pos=1374,19
-Size=546,1061
+Pos=1145,24
+Size=455,441
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
+
+[Window][Content Browser]
+Pos=1145,467
+Size=455,433
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=49,102 Size=1920,1061 Split=X Selected=0x1C33C293
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=315,373 Size=1600,876 Split=X Selected=0x1C33C293
   DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1372,1061 Split=X
     DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1473,1061 Split=X
       DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
@@ -47,5 +53,7 @@ DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=49,102 Size=1920,1061 Spli
         DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,664 Selected=0xC89E3217
       DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=994,1061 CentralNode=1 Selected=0x995B0CF8
     DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=445,1061 Selected=0x1C33C293
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=546,1061 Selected=0x968648AE
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=546,1061 Split=Y Selected=0x968648AE
+    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=455,441 Selected=0x968648AE
+    DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=455,433 Selected=0x371352B7
 
