--- a/Tiny-Editor/imgui.ini
+++ b/Tiny-Editor/imgui.ini
@@ -44,8 +44,13 @@ Size=455,433
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][##toolbar]
+Pos=60,60
+Size=32,32
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=315,373 Size=1600,876 Split=X Selected=0x1C33C293
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=353,411 Size=1600,876 Split=X Selected=0x1C33C293
   DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1372,1061 Split=X
     DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1473,1061 Split=X
       DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
