--- a/Tiny-Editor/imgui.ini
+++ b/Tiny-Editor/imgui.ini
@@ -16,33 +16,33 @@ DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=378,24
-Size=765,876
+Size=765,581
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=376,326
+Size=376,164
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Properties]
-Pos=0,352
-Size=376,548
+Pos=0,190
+Size=376,415
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Stats]
 Pos=1145,24
-Size=455,441
+Size=455,581
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000008,0
 
 [Window][Content Browser]
-Pos=1145,467
-Size=455,433
+Pos=0,607
+Size=1600,293
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Window][##toolbar]
 Pos=60,60
@@ -50,15 +50,15 @@ Size=32,32
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=353,411 Size=1600,876 Split=X Selected=0x1C33C293
-  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1372,1061 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1473,1061 Split=X
-      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
-        DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=376,395 Selected=0x9A68760C
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,664 Selected=0xC89E3217
-      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=994,1061 CentralNode=1 Selected=0x995B0CF8
-    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=445,1061 Selected=0x1C33C293
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=546,1061 Split=Y Selected=0x968648AE
-    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=455,441 Selected=0x968648AE
-    DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=455,433 Selected=0x371352B7
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=2753,90 Size=1600,876 Split=Y Selected=0x1C33C293
+  DockNode          ID=0x00000009 Parent=0x3BC79352 SizeRef=1600,581 Split=X
+    DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1372,1061 Split=X
+      DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1473,1061 Split=X
+        DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
+          DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=376,164 Selected=0x9A68760C
+          DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,415 Selected=0xC89E3217
+        DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=994,1061 CentralNode=1 Selected=0x995B0CF8
+      DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=445,1061 Selected=0x1C33C293
+    DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=546,1061 Selected=0x968648AE
+  DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=1600,293 Selected=0x371352B7
 
