--- a/Tiny-Editor/imgui.ini
+++ b/Tiny-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1600,900
+Size=1065,598
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,56 +9,59 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=1475,19
-Size=445,1061
+Pos=584,58
+Size=176,358
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=378,24
-Size=765,581
+Pos=292,58
+Size=290,358
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
-Pos=0,24
-Size=376,164
+Pos=0,58
+Size=290,101
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Properties]
-Pos=0,190
-Size=376,415
+Pos=0,161
+Size=290,255
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Stats]
-Pos=1145,24
-Size=455,581
+Pos=762,58
+Size=303,358
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Content Browser]
-Pos=0,607
-Size=1600,293
+Pos=0,418
+Size=1065,180
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][##toolbar]
-Pos=60,60
-Size=32,32
+Pos=0,24
+Size=1065,32
 Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=201,259 Size=1600,876 Split=Y Selected=0x1C33C293
-  DockNode          ID=0x00000009 Parent=0x3BC79352 SizeRef=1600,581 Split=X
-    DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1372,1061 Split=X
-      DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1473,1061 Split=X
-        DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
-          DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=376,164 Selected=0x9A68760C
-          DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,415 Selected=0xC89E3217
-        DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=994,1061 CentralNode=1 Selected=0x995B0CF8
-      DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=445,1061 Selected=0x1C33C293
-    DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=546,1061 Selected=0x968648AE
-  DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=1600,293 Selected=0x371352B7
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=2906,372 Size=1065,574 Split=Y Selected=0x1C33C293
+  DockNode            ID=0x0000000A Parent=0x3BC79352 SizeRef=1065,32 HiddenTabBar=1 Selected=0x28257B55
+  DockNode            ID=0x0000000C Parent=0x3BC79352 SizeRef=1065,540 Split=Y
+    DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=1600,358 Split=X
+      DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1372,1061 Split=X
+        DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1473,1061 Split=X
+          DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=376,1061 Split=Y Selected=0x9A68760C
+            DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=376,101 Selected=0x9A68760C
+            DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=376,255 Selected=0xC89E3217
+          DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=994,1061 CentralNode=1 Selected=0x995B0CF8
+        DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=445,1061 Selected=0x1C33C293
+      DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=546,1061 Selected=0x968648AE
+    DockNode          ID=0x0000000B Parent=0x0000000C SizeRef=1600,180 Selected=0x371352B7
 
