--- a/Tiny-ScriptCore/Tiny-ScriptCore.csproj
+++ b/Tiny-ScriptCore/Tiny-ScriptCore.csproj
@@ -17,8 +17,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>Tiny-Editor\Resources\Scripts\</OutputPath>
-    <BaseIntermediateOutputPath>Tiny-Editor\Resources\Scripts\Intermediates\Debug\</BaseIntermediateOutputPath>
+    <OutputPath>..\Tiny-Editor\Resources\Scripts\</OutputPath>
+    <BaseIntermediateOutputPath>..\Tiny-Editor\Resources\Scripts\Intermediates\Debug\</BaseIntermediateOutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
     <DefineConstants>
     </DefineConstants>
@@ -29,8 +29,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>Tiny-Editor\Resources\Scripts\</OutputPath>
-    <BaseIntermediateOutputPath>Tiny-Editor\Resources\Scripts\Intermediates\Release\</BaseIntermediateOutputPath>
+    <OutputPath>..\Tiny-Editor\Resources\Scripts\</OutputPath>
+    <BaseIntermediateOutputPath>..\Tiny-Editor\Resources\Scripts\Intermediates\Release\</BaseIntermediateOutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
     <DefineConstants>
     </DefineConstants>
@@ -41,8 +41,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>Tiny-Editor\Resources\Scripts\</OutputPath>
-    <BaseIntermediateOutputPath>Tiny-Editor\Resources\Scripts\Intermediates\Dist\</BaseIntermediateOutputPath>
+    <OutputPath>..\Tiny-Editor\Resources\Scripts\</OutputPath>
+    <BaseIntermediateOutputPath>..\Tiny-Editor\Resources\Scripts\Intermediates\Dist\</BaseIntermediateOutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
     <DefineConstants>
     </DefineConstants>
@@ -50,7 +50,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Main.cs" />
+    <Compile Include="Source\Main.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
